# jpn-toolset

./: .gitignore  README.md
docs/: k-on-japanese-subs.md
kana-keyboard/: .gitignore  README.md  pyproject.toml
kana-keyboard/src/kana_keyboard/: __init__.py  application.py  buffer.py  buttons.py  helpers.py  kana_page.py  kanji_page.py  main.py  page_base.py  search.py  text_area.py  types.py
kana-keyboard/src/kana_keyboard/css/: style.css
kana-keyboard/src/kana_keyboard/data/: small.json  standard.json  yoon.json
kana-keyboard/src/kana_keyboard/ui/: kana_page.ui  kanji_page.ui  main_window.ui  text_area.ui
kanji-catalogue/: main.py  pyproject.toml
kanji-catalogue/kanji_catalogue/: __init__.py  utils.py
kanji-cli/: .gitignore  README.md  pyproject.toml
kanji-cli/src/kanji_cli/: config.py  helpers.py  importer.py  kanji.py  main.py  parser.py  storage.py
kanji-cli/src/kanji_cli/data/: schema.sql
kanshudo-scraper/: .gitignore  README.md  main.py  pyproject.toml
kanshudo-scraper/kanshudo_scraper/: cache.py  helpers.py  kanji.py  parser.py  storage.py
kanshudo-scraper/src/kanshudo_scraper/: cache.py  main.py  storage.py
kanshudo-scraper/src/kanshudo_scraper/data/: schema.sql
kata-to-hira/: .gitignore  Cargo.toml  README.md
kata-to-hira/src/: lib.rs  main.rs
kata-to-hira/tests/: tests.rs
mdict/: .gitignore  README.md  pyproject.toml
mdict/src/mdict/: config.py  db.py  dict_entry.py  importer.py  main.py
mdict/src/mdict/data/: schema.sql
scripts/src/: bulk_kanshudo.sh  extract_and_remux.sh  fantool.sh  top_kanjis.py
transcriber/: .gitignore  Makefile  README.md  main.py  pyproject.toml
