[project]
name = "kanji-cli"
version = "0.1.0"
description = "Fetch kanji information from XML"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "orjson>=3.11.7",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project.scripts]
kanji = "kanji_cli.main:main"
