[project]
name = "kansudo-scraper"
version = "0.1.0"
description = "Fetch kanji information from Kansudo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "orjson>=3.11.7",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]
