[project]
name = "mdict"
version = "0.1.0"
description = "Offline Japanese-English dictionary"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.11.0",
    "pyright>=1.1.408",
    "ruff>=0.15.5",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project.scripts]
mdict = "mdict.main:main"
mdict-import = "mdict.importer:main"
