[project]
name = "jp-transcriber"
version = "0.1.0"
description = "Create Japanese transcriptions with Whisper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.1.4",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.19.0.56",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "pyright>=1.1.408",
    "ruff>=0.15.1",
]
